--- a/readme.html
+++ b/readme.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Readme</title>
-  </head>
-  <body>
-    read this html
-  </body>
-</html>
+```HTML
+<h2>this html</h2>
+```
